--- a/WisestJobMasters/Views/Jobs/Random.cshtml
+++ b/WisestJobMasters/Views/Jobs/Random.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿@model WisestJobMasters.Models.Job
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Random</h2>
+<h2>@Model.JobTitle</h2>
 
