--- a/WisestJobMasters/Views/Shared/_NavBar.cshtml
+++ b/WisestJobMasters/Views/Shared/_NavBar.cshtml
@@ -11,8 +11,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Jobs", "About", "Home")</li>
+                <li>@Html.ActionLink("Applicants", "Contact", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
